# tt-calendar

./: .gitignore  CLAUDE.md  LICENSE  README.md  fly.toml  package.json  tsconfig.json  turbo.json
.github/workflows/: deploy-calendar.yml  main.yml  update-data.yml
apps/calendar/: fly.toml  package.json  tsconfig.json
apps/calendar-python/: Dockerfile  README.md  fly.toml  pyproject.toml
apps/calendar-python/app/: main.py
apps/calendar-python/app/adapters/: schedule_adapter.py
apps/calendar-python/app/models/: __init__.py  schedule.py
apps/calendar-python/app/services/: calendar_service.py  data_service.py
apps/calendar-python/app/utils/: datetime_utils.py
apps/calendar-python/data/: data.json
apps/calendar-python/data/archive/: 2022.json
apps/calendar/src/: index.ts
apps/calendar/src/adapter/: scheduleAdapter.ts
apps/calendar/src/data/: ka-kanagawa.ts  km-tokyo.ts  kyoto.ts  kyushu.ts  np-mallets.ts  okayama.ts  red-elf.ts  ryukyu.ts  top-nagoya.ts  tt-saitama.ts
apps/calendar/src/service/: all.ts  ka-kanagawa.ts  km-tokyo.ts  kyoto.ts  kyushu.ts  np-mallets.ts  okayama.ts  red-elf.ts  ryukyu.ts  top-nagoya.ts  tt-saitama.ts
src/: index.ts
src/data/: ka-kanagawa.ts  kyushu.ts  okayama.ts  ryukyu.ts
src/service/: ka-kanagawa.ts  km-tokyo.ts  kyushu.ts  np-mallets.ts  okayama.ts  red-elf.ts  tt-saitama.ts
src/types/: schedule.ts
src/util/: calendar.ts
